Fixed navbar display on smaller screens

--- a/web/style.css
+++ b/web/style.css
@@ -62,7 +62,10 @@ header {
 nav ul {
 	list-style-type: none;
 	display: flex;
-	font-size: 1.6vh;
+	flex-wrap: wrap;
+	font-size: 1rem;
+	padding: 0;
+	margin: 0;
 }
 
 nav ul li {
@@ -406,6 +409,7 @@ footer {
 
 	nav ul {
 		margin-top: 1rem;
+		font-size: 1rem;
 	}
 
 	nav ul li {
